<resources>
    <string name="app_name">ChaconBorja1Eva</string>
    <string name="nombre">Nombre :</string>
    <string name="textview">TextView</string>
    <string name="calculadora">Calculadora</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="apellido">Apellido :</string>
    <string name="contacto">CONTACTO</string>
    <string name="imagen">Imagen</string>
    <string name="borrar">BORRAR</string>
    <string name="inv">INV</string>
    <string name="dividir">/</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="resta">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sumar">+</string>
    <string name="_0">0</string>
    <string name="punto">.</string>
    <string name="igual">=</string>
    <string name="correo">Correo:</string>
    <string name="asunto">Asunto:</string>
    <string name="puntua">Puntua:</string>
    <string name="contenido">Contenido:</string>
    <string name="enviar">Enviar</string>
    <string name="mensaje">Mensaje</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="para">Para:</string>
    <string name="correo2">Correo</string>
    <string name="asunto2">Asunto</string>
    <string name="puntua2">Puntua</string>
    <string name="contrase_a1">Contraseña</string>
    <string name="receptor1">Receptor</string>
    <string name="principal">Principal</string>
    <string name="borja_chacon_alvarez">Borja Chacon Alvarez</string>
    <string name="menu">menu</string>
    <string name="cuadrado">Cuadrado</string>
</resources>