<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E0E"
    tools:context=".Calculadora">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="200dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="300dp" />

    <Button
        android:id="@+id/buttonBorrar"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/borrar"
        android:textColor="#090909"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.411" />

    <Button
        android:id="@+id/buttonInv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#08AFFA"
        android:text="@string/inv"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonDiv"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#08AFFA"
        android:text="@string/dividir"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <Button
        android:id="@+id/buttonOcho"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#E4155C"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <Button
        android:id="@+id/buttonNueve"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#E4155C"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <Button
        android:id="@+id/buttonSiete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#E4155C"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#08AFFA"
        android:text="@string/x"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonCuatro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#E4155C"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonCinco"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#E4155C"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/buttonSeis"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#E4155C"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/buttonRest"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#08AFFA"
        android:text="@string/resta"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.612" />

    <Button
        android:id="@+id/buttonUno"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#E4155C"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/butttonDos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#E4155C"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonTres"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#E4155C"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/buttonSum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#08AFFA"
        android:text="@string/sumar"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.491"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonCero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#D3205C"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonComa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#E4155C"
        android:text="@string/punto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Button
        android:id="@+id/buttonIg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="#08AFFA"
        android:text="@string/igual"
        android:textColor="#070707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="352dp"
        android:layout_height="131dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="viewEnd"

        android:textColor="#F8F3F3"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonBorrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>